desarrollo de resumen

--- a/src/main/resources/templates/resumen.html
+++ b/src/main/resources/templates/resumen.html
@@ -134,16 +134,249 @@
   </section>
 
   <!-- reforestacion -->
-  <section id="reforestacion">
+  <section id="reforestacion" th:if="${valor} == '2'">
+    <div class="position">
+      <h1>La reforestación, una alternativa para revertir la desertificación</h1>
+    </div>
+    <img src="/images/mountain-g140cb5e17_1920.jpg"
+    alt=""
+    title=""
+    class="img-fluid">
+    <div class="texto">
+       
+      <hr>
+      <p>La desertificación, o pérdida de suelo fértil y productivo, es uno de los problemas que ahondan —al reducirse el número de árboles incrementa el efecto invernadero— en la crisis climática que vive el planeta. Una de las soluciones es la reforestación. Pese a sus inconvenientes, se ha convertido en una alternativa para volver a colorear de verde miles de hectáreas.</p>
+      
+     <h2><strong>La reforestación se encarga de repoblar zonas afectadas por la deforestación.</strong></h2>  
+     <p>Sin bosques, la vida en la Tierra no sería posible. Estos, junto a los océanos, son el pulmón del planeta y su papel en la lucha contra el cambio climático es vital al absorber cada año unos 2.000 millones de toneladas de CO2 —principal gas de efecto invernadero y gran culpable del calentamiento global—. La trascendencia y el valor de estos ecosistemas terrestres es tan incuestionable que su cuidado y respeto forma parte de los Objetivos de Desarrollo Sostenible (ODS). En concreto, el ODS 15: Vida de ecosistemas terrestres busca proteger, restablecer y promover su uso sostenible.</p>
 
+     <p><strong>Casi una tercera parte del planeta está cubierta de bosques</strong>, lo que equivale a 4.060 millones de hectáreas. Estas grandes masas arboladas nos proveen de lo esencial para la supervivencia: el agua que bebemos, los alimentos que comemos y el aire que respiramos. Sin embargo, estamos acabando con nuestra fuente de vida: la mano del hombre elimina 13 millones de hectáreas de bosque cada año.</p>
+      
+     <p>La sobreexplotación de los recursos naturales, a través de la tala o el crecimiento urbano, es la principal causa atribuible al ser humano en lo relativo a la desertificación, pero hay otras que no dependen de él. Entre ellas, se encuentran las lluvias poco constantes y las sequías estacionales, la erosión del suelo y las tierras pobres, o los incendios forestales a causa del cambio climático. Ante este escenario, la reforestación se revela como una de las estrategias más efectivas para revertir este problema.</p>
+       
+     <h2> QUÉ ES LA REFORESTACIÓN. OBJETIVOS Y BENEFICIOS</h2>
+       <p>La reforestación consiste en repoblar zonas deforestadas para recuperar bosques destruidos en el pasado reciente. Ante la pérdida de grandes masas forestales, vitales para la absorción de CO2, la generación de oxígeno y la lucha contra el cambio climático, se hace necesaria la plantación masiva de árboles nuevos con el objetivo de evitar la pérdida de ecosistemas y frenar el deterioro del planeta.</p> 
+       
+       <img src="https://www.iberdrola.com/documents/20125/40576/bosques_ESP.jpg/1adb9fe1-5b3b-546e-1ba5-c17596a4d86a?t=1627463866503"
+       alt=""
+       title=""
+       class="img-fluid">
+      
+       <h4 aria-level="4" class="ladillo" role="heading"><span class="imgBloque imgContenido">
+      <img loading="lazy" alt="" data-src="" id="imgRRSS0" src="/images/pajaritovolando.svg">
+        </span> &nbsp;Restablecer la pérdida de biodiversidad</h4>
+       
+        <p>Los bosques albergan más del 80 % de todas las especies terrestres del mundo. En concreto, según El estado de los bosques en el mundo 2020 (FAO) acogen a más de 60.000 especies arbóreas, al 80 % de los anfibios, al 75 % de las aves y al 68 % de los mamíferos. Su degradación y desaparición aboca a cientos de especies a la extinción pese a los esfuerzos de conservacionismo. La Estrategia de Biodiversidad de la Unión Europea para 2030 prevé la plantación de al menos 3.000 millones de árboles en territorio europeo para contribuir a la protección de la biodiversidad.</p>
+   
+        <h4 aria-level="4" class="ladillo" role="heading"><span class="imgBloque imgContenido">
+          <img loading="lazy" alt="" data-src="" id="imgRRSS1" src="/images/nubeco2.svg">
+        </span> &nbsp;Reducir el dióxido de carbono en el aire</h4>
+       
+        <p>Los bosques albergan más del 80 % de
+          todas las especies terrestres del mundo. En concreto, según El estado de los bosques en
+          el mundo 2020 acogen a más de 60.000 especies arbóreas, al 80 % de los anfibios, al 75
+          % de las aves y al 68 % de los mamíferos. Su degradación y desaparición aboca a
+          cientos de especies a la extinción pese a los esfuerzos de conservacionismo.
+          La Estrategia de Biodiversidad de la Unión Europea para 2030 prevé la plantación de al
+          menos 3.000 millones de árboles en territorio europeo para contribuir a la protección de
+          la biodiversidad.
+          </p>
+          
+          <h4 aria-level="4" class="ladillo" role="heading"><span class="imgBloque imgContenido">
+            <img loading="lazy" alt="" data-src="" id="imgRRSS2" src="/images/erosion_suelo.svg">
+          </span> &nbsp;Revertir la erosión del suelo y revivir las cuencas hidrográficas</h4>
+          <p> Los árboles del bosque, al frenar el viento y la caída del agua, protegen al suelo de la erosión. Los suelos erosionados e infértiles perjudican a la agricultura y favorecen los deslizamientos de tierra y las inundaciones repentinas. La reforestación busca paliar esa situación, también acentuada por la tala indiscriminada, preservando la fertilidad del suelo con unas raíces bien adheridas. A su vez, las cuencas hidrográficas reviven con la recuperación de nutrientes.</p>
+
+          <h2> TIPOS DE REFORESTACIÓN </h2>
+           <p> Según el lugar en que se practique, se distinguen dos tipos de reforestación:</p>
+           <ul>
+             <li>
+               <h4><strong>Reforestación urbana</strong></h4>
+               Referida a la plantación de árboles en entornos urbanos. Su objetivo tiene que ver con las propias necesidades de la ciudad: modificar el clima —los espacios verdes son buenos para combatir el calor—, mejorar la calidad del aire —la alta incidencia de tráfico en las ciudades hace que suban los niveles de CO2—, aumentar las zonas de sombra o embellecer el entorno.
+             </li>
+             <li>
+               <h4><strong>Reforestación rural</strong></h4>
+               Se trata de la plantación masiva de árboles en superficies forestales que han sido deforestadas, es decir, donde antiguamente existían bosques, selvas o vegetación semiárida. También puede darse en áreas donde estos antes no existían, aunque el término adecuado en ese caso sería forestación. Dentro de la reforestación rural, se enmarcan distintos subtipos atendiendo al objetivo: de conservación, de protección y restauración, agroforestal o productiva
+             </li>
+           </ul>
+           <h2> PROBLEMAS DE LA REFORESTACIÓN</h2>
+           <p> Según la Evaluación de los recursos forestales mundiales 2020 (FAO), más de 2.000 millones de hectáreas de bosque en el mundo tienen planes de gestión. La preparación de directrices para el correcto funcionamiento de los bosques es un punto de partida que no debe faltar a la hora de rehabilitar un bosque o de lanzarse a reforestar porque, como en todo proceso, pueden surgir problemas:</p>
+            <ul>
+              <li>
+                Si la reforestación es impulsiva, es decir, no cuenta con un buen plan de ejecución, puede ser contraproducente, perjudicando a la diversidad de especies o a los cultivos agrícolas.
+              </li>
+              <li>
+                En grandes cultivos forestales podemos conseguir el efecto inverso al buscado, desecando y empobreciendo los suelos por exceso de concentración salina.
+              </li>
+              <li>
+                Una mala elección de los nuevos árboles a introducir, así como su manera de plantarlos y posicionarlos puede ser perjudicial. Además, la introducción de especies invasoras puede favorecer la extinción de otras.
+              </li>
+              <li>
+                Una reforestación mal planteada podría desembocar en un monocultivo, que no solo afectaría a la diversidad de la flora autóctona sino también a los hábitats de los diferentes habitantes del bosque.
+              </li>
+            </ul>
+    </div>
+   <div class="btnquestion">
+    <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+  </div>
   </section>
   <!-- medidas contra incendios -->
-  <section id="reforestacion">
+  <section id="medidas contra incendios" th:if="${valor}=='3'">
+    <div class="position">
+      <h1>Incendios forestales</h1>
+    </div>
+    <img src="/images/incendio.jpg"
+    alt=""
+    title=""
+    class="img-fluid">
+    <hr>
+    <div class="texto">
+      <h2> Definición de incendio forestal</h2>
+     <p> Un incendio forestal es un fuego de gran magnitud que se propaga sin control en algún terreno forestal, es decir, conformado básicamente por árboles. A diferencia de otros tipos de incendios, se extiende con suma rapidez a través de amplias áreas, cambia de dirección súbitamente y puede sortear obstáculos grandes como ríos y carreteras.</p> 
+     <p>Los incendios forestales tienen un gran poder destructivo. Es como si tuvieran vida propia pues pueden avanzar a una velocidad de hasta 23 kilómetros por hora incendiando y consumiendo todo lo que encuentran enfrente. </p>
+     <p>Para que un incendio se produzca, son necesarios: a) un combustible, normalmente la vegetación seca, b) oxígeno del aire y c) una fuente de calor. Los combustibles son cualquier material inflamable. Un material comienza a arder cuando aumenta su temperatura hasta el punto de ignición (o inflamación). Éste depende del material del cual se trate.</p>
+     <p>Al parecer, los incendios forestales han sido más comunes durante las épocas en las que la atmósfera presenta mayor proporción de oxígeno; fue el caso del período Carbonífero.</p>
 
+    <h2> Causas de los incendios forestales</h2>
+    <p> El inicio y desarrollo de un incendio forestal depende en parte del  clima, de la topografía, la forma del combustible y el nivel de humedad de éste. Mientras mayor cantidad de combustible exista en un área, más intenso será el fuego.</p>
+
+      <h3>Las causas pueden dividirse en dos grupos:</h3>
+       <h4>Naturales</h4>
+
+       <p>Aunque los seres humanos son los principales responsables de los incendios forestales, no significa que la naturaleza no incida en su desarrollo. Un hombre puede arrojar un cigarrillo encendido a un  bosque y si éste contiene vegetación seca, probablemente se desarrolle un incendio forestal.</p>  
+       <ul>
+         <li>
+           <h6>Rayos</h6>
+          La caída de un rayo de larga duración a la Tierra trae consigo chispas, suficientes para encender un combustible.
+         </li>
+         <li>
+           <h6>Sequía</h6>
+          La sequía favorece las condiciones para el desarrollo de un incendio forestal pues estimula la combustión.
+         </li>
+         <li>
+           <h6>Calor del sol</h6>
+            El calor intenso, aunado a una sequía, puede secar la vegetación y ésta ser un potencial combustible.
+         </li>
+       </ul>
+      <p>En todos los casos, un factor es determinante: una temperatura o temperaturas altas. En adición, los fuertes vientos pueden ayudar a propagar las chispas y acrecentar el fuego.</p>
+
+       <h4>Antropogénicas</h4>
+       <p>Se necesita muy poco para iniciar un incendio forestal. Incluso, se sabe que el movimiento de las ruedas de un tren sobre las vías produce chispas que si alcanzan un material combustible, producen fuego.</p>
+       <ul>
+         <li>
+           <h6>Las causas antropogénicas se refieren a las actividades humanas</h6>
+           La mayoría de estas causas tienen que ver con el descuido y la irresponsabilidad. Algunas de éstas son las fogatas, los cigarrillos que se tiran sin estar apagados, las quemas agrícolas que se salen de control, los fuegos artificiales e incluso incendios provocados. En otras ocasiones, el desecho inadecuado de los residuos provoca incendios; esto es, la quema de basura. Además de producir contaminación del aire y del suelo, si se pierde su control es proclive de crecer, avanzar y consumir grandes hectáreas de terreno.
+         </li>
+       </ul>
+
+       <h2>Como evitar incendios forestales:</h2>
+       <p>Hacé fuego solo en los lugares habilitados. Si estás haciendo fuego en los lugares
+        habilitados, nunca lo pierdas de vista. Al hacer fuego en lugares habilitados, tené
+        siempre a mano recipientes con abundante agua. Nunca hagas fuego debajo de los
+        árboles.
+        Para apagar el fuego correctamente, hacelo con abundante agua. Remové las cenizas
+        para verificar que no queden brasas encendidas. Echá agua sobre la fogata y sus
+        alrededores. Asegurate que los restos de la fogata queden fríos. Controlá que el viento
+        no arrastre chispas a los árboles y pastizales cercanos.
+        Utilizá sólo leña seca y caída que pueda cortarse con la mano, no cortes ramas verdes y
+        llevate tu basura, porque las latas y vidrios pueden actuar de lupa y provocar incendios.
+        No arrojes colillas de cigarrillos ni fósforos encendidos sobre suelo de zonas rurales y
+        áreas protegidas, esto puede ocasionar incendios. Si vivís cerca de bosques o en el
+        campo, mantené los alrededores de tu vivienda despejada de arbustos y desechos.
+        No enciendas fogatas ni fuego en zonas cercanas a pastizales y bosques. Si es
+        imprescindible encender fuego, tené siempre las siguientes precauciones: El lugar debe
+        estar despejado de pasto, ramas, árboles o elementos que puedan arder. Delimitá la zona
+        del fuego (considera arena, ladrillos, zanjas) para impedir o evitar que se propague.
+        Disponé siempre de elementos para apagarlo (tierra/agua).</p>
+    </div>
+    <div class="btnquestion">
+    <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+  </div>
   </section>
   <!-- hidrocultivo -->
-  <section id="reforestacion">
+  <section id="hidrocultivo" th:if="${valor}=='4'">
+    
+    <div class="position">
+      <h1>¿que es hidroponia?</h1>
+    </div>
+    <img src="/images/hidrocultivo.jpg"
+    alt=""
+    title=""
+    class="img-fluid">
+    <hr>
 
+    <div class="texto">
+    
+      <p>La hidroponía se deriva del griego hydro (agua) y ponos (labor de trabajo), lo cual significa trabajo en agua. Por lo tanto, la hidroponía es un sistema de producción en el cual las raíces de las plantas no se encuentran establecidas en el suelo, sino en un sustrato o en la misma solución nutritiva utilizada. En la solución nutritiva, como su nombre dice, se encuentran disueltos los elementos necesarios para el crecimiento de la planta.</p>
+        <h4>Métodos hidropónicos</h4>
+       <p>El cultivo en agua por definición es el auténtico cultivo hidropónico, aunque bajo el concepto descrito para hidroponía se contemplan otros sistemas. De acuerdo a lo anterior, dependiendo del medio utilizado para el desarrollo de las raíces, los sistemas de cultivo sin suelo se pueden clasificar en tres grupos: 1) cultivos en agua (con solución nutritiva); 2) cultivos en aire (aeropónicos) y 3) cultivos en sustrato con solución nutritiva</p>
+        
+       
+       <img src="https://ecoinventos.com/wp-content/uploads/2018/04/Cultivos-hidroponicos.jpg"
+        alt=""
+        title=""
+        class="img-fluid">
+          
+       <h4> Por qué elegir el cultivo hidropónico</h4>
+        <p>Razones, desde luego, no faltan. Algunas de las más destacadas, además de la mayor eficiencia respecto al espacio necesario, son las siguientes:</p>
+         <ul>
+           <li>
+            Estabilidad de las producciones a lo largo del año.
+           </li>
+           <li>
+            Ahorro de recursos, fundamentalmente de agua gracias a la reutilización de la misma.
+           </li>
+           <li>
+            Alimentos más seguros por la ausencia de productos químicos y de riesgos de enfermedades que se producen en la tierra.
+           </li>
+           <li>
+            Más posibilidades de éxito de los cultivos por su menor vulnerabilidad a elementos externos como, por ejemplo, las inclemencias meteorológicas.
+           </li>
+         </ul>
+          <p>Además de las anteriores se suman la regeneración del suelo y las ventajas propias de contar con un huerto casero, que tampoco son pocas.</p>
+           <p> El reencuentro con la naturaleza, el ahorro y, fundamental, la garantía de que los alimentos que consumes son saludables y seguros son aspectos que marcan la diferencia entre quienes cuentan con un huerto en el hogar, tanto en tierra, como hidropónico, una opción cada vez más extendida.</p>
+          <div class="imagen" >
+           <video width="750px" height="400px" class="" src="https://beepurelife.com/wp-content/uploads/2021/11/video-output-308DD9D5-BFA2-4908-A735-79FB02AEF5BF.mov" controls="" controlslist="nodownload"></video>
+          </div>
+          <h4>esqueje:</h4>
+           <ul>
+             <li>
+              las hojas no deben entrar en contacto con el agua, ya que no toleran bien ese medio y deben estar en lugares muy luminosos.
+             </li>
+             <li>
+              Lo ideal es usar agua que no contenga cloro. Agua filtrada es suficiente. 
+             </li>
+             <li>
+              Se recomienda cambiar el agua una vez al mes, aunque podemos ir rellenando el frasco a medida que se evapore.
+             </li>
+           </ul>
+           <h4>Además, nos compartió un listado de las mejores especies para cultivar en agua:</h4>
+           <ul>
+             <li>
+              Potus
+             </li>
+             <li>
+              Monstera adansoni
+             </li>
+             <li>
+              Sansevieria
+             </li>
+             <li>
+              Tradescantia
+             </li>
+             <li>
+              Philodendron Longifolia
+             </li>
+             <li>
+              Syngonium
+             </li>
+           </ul>
+       
+           <p>Un listado de todas las especies que podés usar, un video con el paso a paso para llevarlo a cabo y todas las recomendaciones necesarias para que tu cultivo sea un éxito, ¿qué más se puede pedir?</p>
+    </div>
+    <div class="btnquestion">
+      <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+    </div>
   </section>
 
   <!-- energia solar -->
