--- a/src/main/resources/templates/comunidad.html
+++ b/src/main/resources/templates/comunidad.html
@@ -69,8 +69,9 @@
         </div>
         <div class="col-md-9">
           <h2 class="featurette-heading">Nombre Apellido, Edad</h2>
+          <h3>nombre del arbol</h3>
           <div class="verarbol">
-            <a href="#" class="btn btn-success ">Ver arbol <i class="bi bi-heart"></i></a>
+            <a href="#" class="btn btn-success ">Ver arbol, nivel <i class="bi bi-heart"></i></a>
           </div>
         </div>
     </div>
