--- a/src/main/resources/templates/comunidad.html
+++ b/src/main/resources/templates/comunidad.html
@@ -3,7 +3,7 @@
 <head>
     <link href="/styles/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,6 +51,9 @@
               </li>
             </ul>
             <div class="d-flex ">
+              <span class="nav-link">Mis puntos<i class="bi bi-plus"></i></span>
+            </div>
+            <div class="d-flex ">
               <a class="cerrar" href="/">cerrar sesion</a>
             </div>
           </div>
@@ -59,7 +62,6 @@
 
       <!-- inicio seccion -->
       <div class="usuario">
-      <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-3 ">
           <div class="imgPerfil"> 
@@ -69,13 +71,14 @@
         </div>
         <div class="col-md-9">
           <h2 class="featurette-heading">Nombre Apellido, Edad</h2>
-          <h3>nombre del arbol</h3>
+          <h3>nombre del arbol, puntos del arbol</h3>
           <div class="verarbol">
-            <a href="#" class="btn btn-success ">Ver arbol, nivel <i class="bi bi-heart"></i></a>
+            <a href="#" class="btn btn-success ">Ver arbol <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
     </div>
-    
+      </div>
+  
         <!-- inicio del foooter parte de abajo de la pantalla -->
      
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
