--- a/src/main/resources/templates/contenido.html
+++ b/src/main/resources/templates/contenido.html
@@ -3,7 +3,7 @@
 <head>
     <link href="/styles/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,6 +47,9 @@
                 <a class="nav-link" aria-current="page" href="/comunidad">Comunidad</a>
               </li>
             </ul>
+            <div class="d-flex ">
+              <span class="nav-link">Mis puntos<i class="bi bi-plus"></i></span>
+            </div>
             <div class="d-flex">
               <a class="cerrar" href="/">cerrar sesion</a>
             </div>
