--- a/src/main/resources/templates/cuestionario.html
+++ b/src/main/resources/templates/cuestionario.html
@@ -3,7 +3,7 @@
 <head>
     <link href="/styles/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,15 +46,146 @@
                 <a class="nav-link" aria-current="page" href="/comunidad">Comunidad</a>
               </li>
             </ul>
+            <div class="d-flex ">
+              <span class="nav-link">Mis puntos<i class="bi bi-plus"></i></span>
+            </div>
             <div class="d-flex">
               <a class="cerrar" href="/">cerrar sesion</a>
             </div>
           </div>
         </div>
       </nav>
+<!-- cuestionario -->
 
-<h1>Aqui ira el cuestionario</h1>
-<a href="/contenido" class="btn btn-primary">volver a contenido</a>
+<!-- energia solar -->
+<div class="seccionCuestionario">
+<div class="cuestionario">
+
+ <h4>1-¿que es la energia solar?</h4> 
+ <div id="pregunta1">
+ <div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio1" id="flexRadioDefault1">
+  <label class="form-check-label" for="flexRadioDefault1">
+    Energia que se obiene mediamte el sol  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio1" id="flexRadioDefault2" >
+  <label class="form-check-label" for="flexRadioDefault2">
+   Energia que se obiene mediante al nucleo de la tierra
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio1" id="flexRadioDefault3">
+  <label class="form-check-label" for="flexRadioDefault3">
+    Energia que se obiene mediantes las erupciones volcanica
+  </label>
+</div>
+</div>
+
+
+ <h4> 2-como funciona la energia solar?</h4> 
+ <div id="pregunta2">
+
+ <div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio2" id="flexRadioDefault1">
+  <label class="form-check-label" for="flexRadioDefault1">
+    Se necesita una instalacion fotovoltaica
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio2" id="flexRadioDefault2">
+  <label class="form-check-label" for="flexRadioDefault2">
+    Se necesita almacenamientos de ondas electromacneticas
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio2" id="flexRadioDefault3">
+  <label class="form-check-label" for="flexRadioDefault3">
+    Se necesita una instalacion que capte radiacion
+  </label>
+</div>
+</div>
+
+ <h4> 3-¿Cómo aprovechar esta energía?</h4>
+ <div id="pregunta3">
+
+ <div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio3" id="flexRadioDefault1">
+  <label class="form-check-label" for="flexRadioDefault1">
+    De forma termica
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio3" id="flexRadioDefault2" >
+  <label class="form-check-label" for="flexRadioDefault2">
+    De forma electrica 
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio3" id="flexRadioDefault3" >
+  <label class="form-check-label" for="flexRadioDefault3">
+    De forma fotovotaica
+  </label>
+</div>
+</div>
+
+ <h4> 4_¿Cómo se aprovecha la fotovoltaica?</h4> 
+ <div id="pregunta4">
+
+ <div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio4" id="flexRadioDefault1">
+  <label class="form-check-label" for="flexRadioDefault1">
+    Transformacion directa (aprovechando la radiacion del sol)
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio4" id="flexRadioDefault2" >
+  <label class="form-check-label" for="flexRadioDefault2">
+    Transformacion pasiva (aprovechando las ondas electromacneticas)
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio4" id="flexRadioDefault3" >
+  <label class="form-check-label" for="flexRadioDefault3">
+    Transformacion activa (aprovechando la radiacion)
+  </label>
+</div>
+</div>
+
+ <h4> 5-¿Cuáles son las aplicaciones de la energía fotovoltaica?</h4> 
+ <div id="pregunta5">
+
+ <div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio5" id="flexRadioDefault1">
+  <label class="form-check-label" for="flexRadioDefault1">
+    Autoconsumo 
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio5" id="flexRadioDefault2" >
+  <label class="form-check-label" for="flexRadioDefault2">
+    Huerto solares
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadio5" id="flexRadioDefault3" >
+  <label class="form-check-label" for="flexRadioDefault3">
+    Refugios ambientales
+  </label>
+</div>
+ </div>
+
+<div class="contenedor">
+  <a href="/contenido" class="btn btn-primary izq">Volver a contenido</a>
+  <a href="/contenido" class="btn btn-primary der">Enviar respuesta</a>
+</div>
+
+</div>
+</div>
+
+<!-- fin cuestionario -->
+
+
 
 
 
