--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -51,7 +51,13 @@
               </li>
             </ul>
             <div class="d-flex ">
+              <span class="nav-link">Mis puntos<i class="bi bi-plus"></i></span>
+            </div>
+            <div class="d-flex ">
               <a class="cerrar" href="/">cerrar sesion</a>
+            </div>
+            <div class="d-flex ">
+              <i class="bi bi-gear"></i>
             </div>
           </div>
         </div>
@@ -72,13 +78,14 @@
       </div>
     
              <!-- Arbol -->
+             <div class="video">
              <div class="botonregar">
               <a href="#" class="btn btn-success ">Regar <i class="bi bi-heart"></i></a>
             </div>
               <div class="arbol">
                   <video src="/videos/arbol.mp4" width="700" height="500" controls></video> 
               </div>
-
+            </div>
         <!-- inicio del foooter parte de abajo de la pantalla -->
      
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
