--- a/src/main/resources/templates/resumen.html
+++ b/src/main/resources/templates/resumen.html
@@ -5,7 +5,7 @@
   <link href="/styles/style.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,15 +52,17 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/perfil">Perfil</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/arbol">Arbol</a>
-          </li>
+          </li>        
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/contenido">Contenido</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/comunidad">Comunidad</a>
+          </li>
         </ul>
+        <div class="d-flex ">
+          <span class="nav-link">Mis puntos<i class="bi bi-plus"></i></span>
+        </div>
         <div class="d-flex">
           <a class="cerrar" href="/">cerrar sesion</a>
         </div>
@@ -77,7 +79,7 @@
     <img src="https://www.bbva.com/wp-content/uploads/2021/04/energía_eolica_apertura-e1617804810829.jpg"
       alt="energía_eolica_apertura-viento-sostenibilidad-renovable-no contaminante-fuentes-combustibles"
       title="energía_eolica_apertura-viento-sostenibilidad-renovable-no contaminante-fuentes-combustibles"
-      class="img-fluid"> <!-- imagen banner -->
+      class="img-fluid banner"> <!-- imagen banner -->
 
     <div class="texto">
       <h2> Origen de la energía eólica</h2>
@@ -142,9 +144,8 @@
     alt=""
     title=""
     class="img-fluid">
+   
     <div class="texto">
-       
-      <hr>
       <p>La desertificación, o pérdida de suelo fértil y productivo, es uno de los problemas que ahondan —al reducirse el número de árboles incrementa el efecto invernadero— en la crisis climática que vive el planeta. Una de las soluciones es la reforestación. Pese a sus inconvenientes, se ha convertido en una alternativa para volver a colorear de verde miles de hectáreas.</p>
       
      <h2><strong>La reforestación se encarga de repoblar zonas afectadas por la deforestación.</strong></h2>  
@@ -299,10 +300,9 @@
     <div class="position">
       <h1>¿que es hidroponia?</h1>
     </div>
-    <img src="/images/hidrocultivo.jpg"
-    alt=""
-    title=""
-    class="img-fluid">
+    <div class="banner">
+    <img src="/images/hidrocultivo.jpg" alt="" title="" >
+  </div>
     <hr>
 
     <div class="texto">
@@ -450,9 +450,8 @@
       <hr>
 
       <div class="youtube-player imagen" data-id="MFn7jHcrrdU">
-        <iframe src="https://www.youtube.com/embed/MFn7jHcrrdU?autoplay=1&amp;rel=0" frameborder="0" allowfullscreen="1"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture">
-
+        <iframe src="https://www.youtube.com/embed/MFn7jHcrrdU?autoplay=1&amp;rel=0"  width="750px" height="400px" hallowfullscreen="1"
+          allow="accelerometer; encrypted-media; gyroscope; picture-in-picture">
         </iframe>
       </div>
 
@@ -477,8 +476,9 @@
     <div class="position">
       <h1>10 consejos para la protección animal</h1>
     </div>
-    <img src="https://www.fundacionaquae.org/wp-content/uploads/2018/10/proteger-a-los-animales.jpg" alt="" title=""
-      class="img-fluid "> <!-- imagen banner -->
+    <div class="banner">
+    <img src="https://www.fundacionaquae.org/wp-content/uploads/2018/10/proteger-a-los-animales.jpg" alt="" title=""> <!-- imagen banner -->
+    </div>
     <div class="texto">
 
       <h2> 10 acciones para la protección y el cuidado de los animales</h2>
@@ -621,7 +621,9 @@
     <div class="position">
       <h1>¿Por qué es importante Reciclar?</h1>
     </div>
+    <div class="banner">
     <img src="/images/reciclaje.jpg" alt="" title="" class="img-fluid "> <!-- imagen banner -->
+  </div>
     <div class="texto">
       
       <h2>La importancia de reciclar</h2>
@@ -750,25 +752,20 @@
     </div>
   </section>
 
-  <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-    <svg class="bi" width="30" height="24">
-      <use xlink:href="#bootstrap"></use>
-    </svg>
-  </a>
-  <span class="text-muted">© 2022 Company, Inc</span>
-  </div>
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+      </a>
+      <span class="text-muted">© 2021 Company, Inc</span>
+    </div>
+ 
 
-  <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-    <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-          <use xlink:href="#twitter"></use>
-        </svg></a></li>
-    <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-          <use xlink:href="#instagram"></use>
-        </svg></a></li>
-    <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-          <use xlink:href="#facebook"></use>
-        </svg></a></li>
-  </ul>
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+    </ul>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
