--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -56,26 +56,28 @@
             <div class="d-flex ">
               <a class="cerrar" href="/">cerrar sesion</a>
             </div>
-            <div class="d-flex ">
-              <i class="bi bi-gear"></i>
+            <div class="d-flex configurar">
+              <a class="bi bi-gear" href="/editarusuario"></a>
             </div>
           </div>
         </div>
       </nav>
 
       <!-- inicio seccion perfil -->
-      <div class="row perfil">
+      <div class=" perfil">
+        <div class="row">
         <div class="col-md-5 ">
           <div class="imagenPerfil"> 
             <img src="/images/usuario.png" alt=""> 
           </div>
 
         </div>
-        <div class="col-md-7">
+        <div class="col-md-7 datos">
           <h2 class="featurette-heading">Nombre Apellido, Edad</h2>
           <p class="lead">Resumen de la persona en una descripcion como gustos, hobby, profesion. Opinion propia de la contaminacin y como aporta para cuidar al medio ambiente</p>
         </div>
       </div>
+    </div>
     
              <!-- Arbol -->
              <div class="video">
@@ -83,7 +85,7 @@
               <a href="#" class="btn btn-success ">Regar <i class="bi bi-heart"></i></a>
             </div>
               <div class="arbol">
-                  <video src="/videos/arbol.mp4" width="700" height="500" controls></video> 
+                  <video src="/videos/arbol.mp4" width="700"controls></video> 
               </div>
             </div>
         <!-- inicio del foooter parte de abajo de la pantalla -->
