--- a/src/main/resources/templates/editarusuario.html
+++ b/src/main/resources/templates/editarusuario.html
@@ -12,8 +12,6 @@
     <title>Planetseed</title>
 </head>
 <body>
-     <!--logs del pie de pagina svg--> 
-
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="bootstrap" viewBox="0 0 118 94">
           <title>Bootstrap</title>
@@ -30,9 +28,8 @@
         </symbol>
       </svg>
 
-    <!--navegador que esta en la cabezera de la pagina--> 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Planetseed</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,72 +37,85 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                 <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/perfil">Perfil</a>
+              </li>
+            
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/contenido">Contenido</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/comunidad">Comunidad</a>
+              </li>
             </ul>
-            <div class="d-flex">
-                <a class="nav-link" href="/registro">Registrar</a>
-              </div>
-
-              <div class="d-flex">
-                  <a class="nav-link" href="/">Login</a>
-                </div>
+            <div class="d-flex ">
+              <span class="nav-link">Mis puntos<i class="bi bi-plus"></i></span>
+            </div>
+            <div class="d-flex ">
+              <a class="cerrar" href="/">cerrar sesion</a>
+            </div>
+            <div class="d-flex configurar">
+              <a class="bi bi-gear" href="/editarusuario"></a>
+            </div>
           </div>
         </div>
       </nav>
-         <!--inicio de formulario--> 
-         <form class="formulario" action="/registro" method="POST">
-              <legend><strong>Registrate para cambiar el mundo</strong></legend>
-              <div class="mb-3">
-                <label for="disabledTextInput"  class="form-label">Nombre</label>
-                <input type="text" id="disabledTextInput" name="nombre" th:value="*{nombre}"  class="form-control" placeholder="example:juanito">
-              </div>
-              <div class="mb-3">
-                <label for="disabledTextInput" class="form-label">Apellido</label>
-                <input type="text" id="disabledTextInput"  name="apellido" th:value="*{apellido}"   class="form-control" placeholder="example:laguna">
-              </div>
-              <div class="mb-3">
-                <label for="disabledTextInput" class="form-label">Edad</label>
-                <input type="text" id="disabledTextInput"  name="edad" th:value="*{edad}"  class="form-control" placeholder="example:18">
-              </div>
-              <div class="mb-3">
-                <label for="disabledTextInput"   class="form-label">ingrese email</label>
-                <input type="text" id="disabledTextInput" name="email" th:value="*{email}"  class="form-control" placeholder="example:juanitolaguna@gmail.com">
-              </div>
-              <label for="inputPassword5"  class="form-label">Password</label>
-              <input type="password" id="inputPassword5" name="password" th:value="*{password}"   class="form-control" aria-describedby="passwordHelpBlock">
-              <div id="passwordHelpBlock" class="form-text">
-                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-              </div>
-              
-              <div class="alert alert-success" role="alert" th:if="${exito}!=null">
-                <p th:text="${exito}"></p>
-              </div>
-              <div class="alert alert-danger" role="alert" th:if="${error}!=null">
-                 <p th:text="${error}"></p>
-              </div>
-              
-              <button type="submit" class="btn btn-success">registrar</button>
-       
-          </form>
-         
+      
+<!-- seccion -->
+<form class="formulario" action="/registro" method="POST">
+    <legend><strong>Editar Perfil</strong></legend>
+    <div class="mb-3">
+      <label for="disabledTextInput"  class="form-label">Nombre</label>
+      <input type="text" id="disabledTextInput" name="nombre" th:value="*{nombre}"  class="form-control" placeholder="example:juanito">
+    </div>
+    <div class="mb-3">
+      <label for="disabledTextInput" class="form-label">Apellido</label>
+      <input type="text" id="disabledTextInput"  name="apellido" th:value="*{apellido}"   class="form-control" placeholder="example:laguna">
+    </div>
+    <div class="mb-3">
+      <label for="disabledTextInput" class="form-label">Edad</label>
+      <input type="text" id="disabledTextInput"  name="edad" th:value="*{edad}"  class="form-control" placeholder="example:18">
+    </div>
+    <div class="alert alert-success" role="alert" th:if="${exito}!=null">
+      <p th:text="${exito}"></p>
+    </div>
+    <div class="alert alert-danger" role="alert" th:if="${error}!=null">
+       <p th:text="${error}"></p>
+    </div>
 
-
-      <!--footers pie de pagina--> 
-
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-          </a>
-          <span class="text-muted">© 2021 Company, Inc</span>
-        </div>
+    <label for="disabledTextInput" class="form-label">Agregar descripción</label>
+    <div class="input-group"> 
+        <textarea class="form-control" aria-label="With textarea" ></textarea>
+      </div>
+      <legend><strong>Editar nombre del arbol</strong></legend>
+      <div class="mb-3">
+        <label for="disabledTextInput"  class="form-label">Nombre</label>
+        <input type="text" id="disabledTextInput" name="nombreArbol"   class="form-control" placeholder="example:juanito">
+      </div>
     
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-          <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-          <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-        </ul>
-      </footer>
+    <button type="submit" class="btn btn-success btnguardar">Guardar</button>
+    <button class="btn btn-danger btnguardar">Dar de baja cuenta</button>
 
+
+</form>
+
+<!-- fin seccion -->
+      <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+            </a>
+            <span class="text-muted">© 2021 Company, Inc</span>
+          </div>
+      
+          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+          </ul>
+        </footer>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
