--- a/src/main/resources/templates/editarusuario.html
+++ b/src/main/resources/templates/editarusuario.html
@@ -52,7 +52,7 @@
               <span class="nav-link">Mis puntos<i class="bi bi-plus"></i></span>
             </div>
             <div class="d-flex ">
-              <a class="cerrar" href="/">cerrar sesion</a>
+              <a class="cerrar" href="/logout">cerrar sesion</a>
             </div>
             <div class="d-flex configurar">
               <a class="bi bi-gear" href="/editarusuario"></a>
@@ -62,42 +62,49 @@
       </nav>
       
 <!-- seccion -->
-<form class="formulario" action="/registro" method="POST">
+<form class="formulario" action="/editarusuario" method="POST">
     <legend><strong>Editar Perfil</strong></legend>
+   
+
+      <input type="hidden" id="disabledTextInput" name="id" th:value="*{usuario.id}"  class="form-control">
+   
+    
     <div class="mb-3">
       <label for="disabledTextInput"  class="form-label">Nombre</label>
-      <input type="text" id="disabledTextInput" name="nombre" th:value="*{nombre}"  class="form-control" placeholder="example:juanito">
+      <input type="text" id="disabledTextInput" name="nombre" th:value="*{usuario.nombre}"  class="form-control" placeholder="example:juanito">
     </div>
     <div class="mb-3">
       <label for="disabledTextInput" class="form-label">Apellido</label>
-      <input type="text" id="disabledTextInput"  name="apellido" th:value="*{apellido}"   class="form-control" placeholder="example:laguna">
+      <input type="text" id="disabledTextInput"  name="apellido" th:value="*{usuario.apellido}"   class="form-control" placeholder="example:laguna">
     </div>
     <div class="mb-3">
       <label for="disabledTextInput" class="form-label">Edad</label>
-      <input type="text" id="disabledTextInput"  name="edad" th:value="*{edad}"  class="form-control" placeholder="example:18">
-    </div>
-    <div class="alert alert-success" role="alert" th:if="${exito}!=null">
-      <p th:text="${exito}"></p>
-    </div>
-    <div class="alert alert-danger" role="alert" th:if="${error}!=null">
-       <p th:text="${error}"></p>
+      <input type="text" id="disabledTextInput"  name="edad" th:value="*{usuario.edad}"  class="form-control" placeholder="example:18">
     </div>
 
-    <label for="disabledTextInput" class="form-label">Agregar descripción</label>
+    <label for="disabledTextInput" class="form-label"  >Agregar descripción</label>
     <div class="input-group"> 
-        <textarea class="form-control" aria-label="With textarea" ></textarea>
+        <textarea class="form-control" aria-label="With textarea" name="descripcion" th:value="*{usuario.descripcion}"></textarea>
       </div>
-      <legend><strong>Editar nombre del arbol</strong></legend>
+    
+    <!-- Editar abol -->
+    <legend><strong>Editar nombre del arbol</strong></legend>
       <div class="mb-3">
         <label for="disabledTextInput"  class="form-label">Nombre</label>
-        <input type="text" id="disabledTextInput" name="nombreArbol"   class="form-control" placeholder="example:juanito">
+        <input type="text" id="disabledTextInput" name="nombreArbol"  th:if="${usuario.arbol!=null}" th:text="*{usuario.arbol.nombre}"  class="form-control" placeholder="example: rogelio">
       </div>
     
     <button type="submit" class="btn btn-success btnguardar">Guardar</button>
     <button class="btn btn-danger btnguardar">Dar de baja cuenta</button>
 
-
 </form>
+<!-- cartel de exito  o error -->
+  <div class="alert alert-success" role="alert" th:if="${exito}!=null">
+      <p th:text="${exito}"></p>
+    </div>
+    <div class="alert alert-danger" role="alert" th:if="${error}!=null">
+       <p th:text="${error}"></p>
+    </div>
 
 <!-- fin seccion -->
       <div class="container">
