--- a/src/main/resources/templates/resumen.html
+++ b/src/main/resources/templates/resumen.html
@@ -64,7 +64,7 @@
           <span class="nav-link">Mis puntos<i class="bi bi-plus"></i></span>
         </div>
         <div class="d-flex">
-          <a class="cerrar" href="/">cerrar sesion</a>
+          <a class="cerrar" href="/logout">cerrar sesion</a>
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@
         electricidad.</p>
     </div>
 <div class="btnquestion">
-    <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+    <a href="/cuestionario?" class="btn btn-primary">Ir al cuestionario</a>
   </div>
   </section>
 
@@ -467,7 +467,7 @@
       <p> Huertos solares - para la producción a gran escala y la comercialización de la energía obtenida.</p>
     </div>
     <div class="btnquestion">
-      <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+      <a href="/cuestionario?question=5" class="btn btn-primary">Ir al cuestionario</a>
     </div>
   </section>
   
