--- a/src/main/resources/templates/comunidad.html
+++ b/src/main/resources/templates/comunidad.html
@@ -54,7 +54,7 @@
               <span class="nav-link">Mis puntos<i class="bi bi-plus" ></i></span>
             </div>
             <div class="d-flex ">
-              <a class="cerrar" href="/">cerrar sesion</a>
+              <a class="cerrar" href="/logout">cerrar sesion</a>
             </div>
           </div>
         </div>
