--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -82,7 +82,10 @@
     
              <!-- Arbol -->
              <div class="video">
+             
              <div class="botonregar">
+              <p>Nombre: </p>
+              <p>Puntos del àrbol: </p>
               <a href="#" class="btn btn-success ">Regar <i class="bi bi-heart"></i></a>
             </div>
               <div class="arbol">
